[package]
name = "dependency-timeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
git2 = "0.18.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_toml = "0.0.1"
